Make sure chords with no lyrics align to top

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,18 +13,20 @@ $font-size-base: 1.2rem;
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
-  padding-top: 1rem;
-}
-
-.part {
-  margin-bottom: 0.5em;
+  padding-top: 1.5rem;
 }
 
 .chord, .lyric {
-  margin-right: 0.2em;
   text-wrap: avoid;
+  // Make sure chords right next to each other have breathing room
+  margin-right: 0.2em;
 }
 
 .chord {
   font-weight: bold;
+}
+
+.lyric {
+  // Force the chords above an empty lyrics section to the top
+  min-height: 1.5em;
 }
